--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     height:auto;
    font-size: medium;
-background-image: url("https://i.pinimg.com/originals/3d/fe/ba/3dfebaf06fe620590697acf279d51fc8.png");
+background-color: #808087;
 background-size: 20%;
 background-attachment: fixed;
 display: list-item;
